knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Plan_Overview__c/pqcrush__pq_CRUSH_Plan_Overview__c.object-meta.xml
<CustomObject>
    <label>CRUSH Plan Overview</label>
    <nameField>
        <label>Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CRUSH Plan Overviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>