knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Plan_Overview__c/fields/pqcrush__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Background_Color__c</fullName>
    <label>Background Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>