knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Plan_Overview__c/fields/pqcrush__Data_Key__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Data_Key__c</fullName>
    <description>Add a key to distinguish data between components added to the same Account Plan</description>
    <inlineHelpText>Add a key to distinguish data between components added to the same Account Plan</inlineHelpText>
    <label>Data Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>