knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_Plan_Overview__c/fields/pqcrush__Title__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Title__c</fullName>
    <label>Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>